--- a/ML for ESKD/landmarking_locf.Rmd
+++ b/ML for ESKD/landmarking_locf.Rmd
@@ -20,7 +20,7 @@ lib.ok <- sapply(libraries, require, character.only=TRUE)
 
 cross_val <- 5
 seed <- 7
-predict_horizon <- 5 #5
+predict_horizon <- 5 #2
 landmark <- c(0.5, 1, 1.5, 2, 2.5, 3)
 
 # full model # r/o: "urea", "creatinine"
@@ -61,7 +61,7 @@ set.seed(seed)
 folds <- dt %>% 
     select(id, value_egfr_init:status_compete) %>% 
     distinct(id, .keep_all = TRUE) %>% 
-    rsample::vfold_cv(v = cross_val, strata = "status_compete", )
+    rsample::vfold_cv(v = cross_val, strata = "status_compete")
 ```
 
 ```{r cross validation}
@@ -261,10 +261,14 @@ for (lmx in landmark){
 ```
 
 ```{r final model}
-predict_horizon <- 2 #5
-landmark <- c(0.5, 1, 1.5, 2, 2.5, 3)
-longi_cov <- c("egfr", "haemoglobin", "albumin", "chloride", "glucose")
-base_cov <- c("age_init")
+predict_horizon <- 5 #2
+
+# longi_cov <- c("egfr", "haemoglobin", "albumin", "chloride", "glucose") #Top5 model
+longi_cov <- c("albumin", "alkphos", "bicarb", "calcium", "chloride",
+                "egfr", "glucose", "haemoglobin", "phosphate", "platelet",
+                "potassium", "sodium", "wcc")
+# base_cov <- c("age_init") #Top5 model
+base_cov <- c("age_init", "sex")
 
 fold <- 2
 
@@ -299,7 +303,9 @@ train_dt <- impute_dt %>%
               by = c("id", "relyear")) %>% 
     arrange(id, relyear) %>% 
     as.data.table() 
-    
+
+saveRDS(train_dt, "full_train_dt.gz")
+# saveRDS(train_dt, "top5_train_dt.gz")  
 train_super_dt <- NULL
     
 for (i in seq_along(landmark)) {
@@ -317,9 +323,11 @@ test_dt <- test_dt %>%
     fill(!!longi_cov) %>%
     ungroup() %>% as.data.table()
 
-# saveRDS(test_dt, "test_dt.gz")
+saveRDS(test_dt, "full_test_dt.gz")
+# saveRDS(test_dt, "top5_test_dt.gz")
 
 set.seed(seed = seed)
+
 for (lmx in landmark){
     print(glue::glue("Processing landmark: {lmx}"))
 
@@ -340,11 +348,183 @@ for (lmx in landmark){
           mtry = tune_rsf$optimal[[2]], nodesize = tune_rsf$optimal[[1]], 
           seed = seed)
     
-    model_name <- str_c(c("model", lmx, "landmark", predict_horizon), 
+    model_name <- str_c(c("full", "model", lmx, "landmark", predict_horizon), 
                         collapse = "_")
+    
+    # model_name <- str_c(c("top5", "model", lmx, "landmark", predict_horizon), 
+    #                     collapse = "_") #top5
     
     file_name <- str_c(c(model_name, ".gz"), collapse = "")
     saveRDS(rsf_model, file = file_name)
 }
 ```
 
+```{r model lists}
+# model_2y <- vector("list", length = length(landmark))
+model_5y <- vector("list", length = length(landmark))
+
+for (i in seq_along(landmark)){
+    file_name <- str_c(c("full", "model", landmark[i], "landmark_5.gz"), 
+                       collapse = "_")
+    # file_name <- str_c(c("top5", "model", landmark[i], "landmark_5.gz"), 
+    #                    collapse = "_")
+    # file_name <- str_c(c("top5", "model", landmark[i], "landmark_2.gz"), 
+    #                    collapse = "_")
+    print(file_name)
+    model_5y[[i]] <- readRDS(file = file_name)
+    # model_2y[[i]] <- readRDS(file = file_name)
+}
+
+# saveRDS(model_5y, "full_model_5y.gz")
+# saveRDS(model_5y, "top5_model_5y.gz") #top5
+# saveRDS(model_2y, "model_2y.gz")
+
+# model_2y <- read_rds("model_2y.gz")
+# model_5y <- read_rds("top5_model_5y.gz")
+model_5y <- read_rds("full_model_5y.gz")
+```
+
+```{r train_cif}
+predict_horizon <- 5 #2
+super_eskd_cif <- NULL
+super_death_cif <- NULL
+
+for (index in seq_along(landmark)){
+    temp <- train_super_dt %>% 
+        filter(LM == landmark[index])
+    
+    # column_cif <- sindex(jump.times = model_2y[[index]]$time.interest,
+    #                      eval.times = seq(landmark[index], 
+    #                                       landmark[index] + predict_horizon, 
+    #                                       0.25))
+    
+    column_cif <- sindex(jump.times = model_5y[[index]]$time.interest,
+                         eval.times = seq(landmark[index],
+                                          landmark[index] + predict_horizon,
+                                          0.25))
+    
+    column_cif[1] <- 1
+    eskd_cif <- data.table(id = temp$id)
+    
+    rsf_prediction <- predict.rfsrc(object = model_5y[[index]],
+                                    newdata = temp, na.action = "na.impute")
+    
+    eskd_cif[, c(as.character(seq(landmark[index], landmark[index] + predict_horizon, 0.25))) := as.data.table(rsf_prediction$cif[, column_cif, "CIF.1"])]
+    
+    eskd_cif <- melt(eskd_cif, id.vars = c("id"), 
+         variable.name = "relyear",
+         value.name = "cif")
+    
+    super_eskd_cif <- rbind(super_eskd_cif, eskd_cif)
+    
+    death_cif <- data.table(id = temp$id)
+    
+    death_cif[, c(as.character(seq(landmark[index], landmark[index] + predict_horizon, 0.25))) := as.data.table(rsf_prediction$cif[, column_cif, "CIF.2"])]
+    
+    death_cif <- melt(death_cif, id.vars = c("id"), 
+         variable.name = "relyear",
+         value.name = "cif")
+    
+    super_death_cif <- rbind(super_death_cif, death_cif)
+}
+
+eskd_name <- str_c(c("full", "train_eskd_cif", predict_horizon),
+                   collapse = "_")
+# eskd_name <- str_c(c("top5", "train_eskd_cif", predict_horizon),
+#                    collapse = "_")
+
+file_name <- str_c(c(eskd_name, ".gz"), collapse = "")
+fwrite(super_eskd_cif, file_name)
+
+death_name <- str_c(c("full", "train_death_cif", predict_horizon),
+                   collapse = "_")
+# death_name <- str_c(c("top5", "train_death_cif", predict_horizon),
+#                    collapse = "_")
+
+file_name <- str_c(c(death_name, ".gz"), collapse = "")
+fwrite(super_death_cif, file_name)
+```
+
+```{r test_cif}
+predict_horizon <- 5 #2
+
+test_dt <- test_dt %>% 
+    select(id, !!base_cov, relyear, !!longi_cov, 
+           time_compete:status_compete_num) %>% 
+    group_by(id) %>% 
+    fill(!!longi_cov) %>% 
+    ungroup() %>% 
+    as.data.table()
+
+lmx_test_dt <- NULL
+
+for (i in seq_along(landmark)) {
+    temp <- cutLM(data = test_dt, outcome = list(time = "time_compete",
+                                          status = "status_compete_num"),
+                  LM = landmark[i], horizon = landmark[i] + predict_horizon,
+                  covs = list(fixed = base_cov, varying = longi_cov),
+                  format = "long", id = "id", rtime = "relyear", 
+                  right = FALSE) 
+     lmx_test_dt <- rbind(lmx_test_dt, temp)
+}
+
+lmx_test_dt <- lmx_test_dt %>% 
+    arrange(id, LM)
+
+lmx_test_dt <- lmx_test_dt %>% 
+    select(-(time_compete:status_compete_num))
+
+super_eskd_cif <- NULL
+super_death_cif <- NULL
+
+for (index in seq_along(landmark)){
+    temp  <- lmx_test_dt %>% 
+        filter(LM == landmark[index])
+    
+    # rsf_prediction <- predict.rfsrc(object = model_2y[[index]],
+    #                                 newdata = temp, na.action = "na.impute")
+    
+    rsf_prediction <- predict.rfsrc(object = model_5y[[index]],
+                                    newdata = temp, na.action = "na.impute")
+    
+    column_cif <- sindex(jump.times = rsf_prediction$time.interest,
+                         eval.times = seq(landmark[index], 
+                                          landmark[index] + predict_horizon, 
+                                          0.25))
+    
+    column_cif[1] <- 1
+    eskd_cif <- data.table(id = temp$id)
+    
+    eskd_cif[, c(as.character(seq(landmark[index], landmark[index] + predict_horizon, 0.25))) := as.data.table(rsf_prediction$cif[, column_cif, "CIF.1"])]
+    
+    eskd_cif <- melt(eskd_cif, id.vars = c("id"), 
+         variable.name = "relyear",
+         value.name = "cif")
+    
+    super_eskd_cif <- rbind(super_eskd_cif, eskd_cif)
+    
+    death_cif <- data.table(id = temp$id)
+    
+    death_cif[, c(as.character(seq(landmark[index], landmark[index] + predict_horizon, 0.25))) := as.data.table(rsf_prediction$cif[, column_cif, "CIF.2"])]
+    
+    death_cif <- melt(death_cif, id.vars = c("id"), 
+         variable.name = "relyear",
+         value.name = "cif")
+    
+    super_death_cif <- rbind(super_death_cif, death_cif)
+}
+
+eskd_name <- str_c(c("full", "test_eskd_cif", predict_horizon),
+                   collapse = "_")
+# eskd_name <- str_c(c("top5", "test_eskd_cif", predict_horizon),
+#                    collapse = "_")
+file_name <- str_c(c(eskd_name, ".gz"), collapse = "")
+fwrite(super_eskd_cif, file_name)
+
+death_name <- str_c(c("full", "test_death_cif", predict_horizon),
+                   collapse = "_")
+# death_name <- str_c(c("top5", "test_death_cif", predict_horizon),
+#                    collapse = "_")
+file_name <- str_c(c(death_name, ".gz"), collapse = "")
+fwrite(super_death_cif, file_name)
+```
